# pong

./: .clang-format  .dockerignore  .dockerignre  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  index.html  pong.data  pong.js  run.sh  style.css  vcpkg.json  wasm.sh
.github/workflows/: build-wasm.yaml  build-windows.yaml
cmake/: apt.sh  build-info.cmake
deploy/: .gitignore  deploy.sh
docker/: .gitignore  Dockerfile  it.sh  run.sh  test.sh  wasm.sh
ldd/: copy-lib.sh  run.sh
misc/: gen-circle.sh
proto/: map.proto
src/: .clang-tidy  build.h.in  config.hpp  event.cpp  event.h  game.cpp  game.h  input.cpp  input.h  input.hpp  main.cpp  physics.cpp  physics.h  pong.cpp  pong.h  region.hpp  sdl.cpp  sdl.h  time.hpp
src/context/: ball.h  brick.hpp  entity.h  input.hpp  window.h
src/physics/: physics.cpp  physics.h
src/render/: ball.h  grid.cpp  grid.h  layout.hpp  rainbow.hpp  text.cpp  text.h
src/sys/: arg.hpp  debug.cpp  debug.h  debug.hpp  spdlog.hpp  ver.cpp  ver.h  ver.hpp
src/util/: ball.hpp  color.hpp  event.hpp  hct.hpp  path.hpp  print.hpp  rand.hpp
src/util/material/: README.md  cam.cpp  cam.h  hct_solver.cpp  hct_solver.h  utils.cpp  viewing_conditions.cpp  viewing_conditions.h
tool/: .gitignore  install-cmake.sh  run.sh
web/: index.html  style.css
